Try to fix close button on iOS safari

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6667,6 +6667,7 @@ img[src="undefined"] {
   opacity: 0.9;
   color: #999999;
   font-size: 24px;
+  font-family: 'Zapf Dingbats';
 }
 
 .close-button-x:hover {
